--- a/startup.html
+++ b/startup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HTML5 Create HTML5 Canvas JavaScript Drawing App Example </title>
+    <title>Collaborative Drawing App</title>
     <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/draw.js">   </script>
